Fri Oct 18 13:21:08 1996  Barry Jaspan  <bjaspan@mit.edu>

	* api.2/init-v2.exp: add test 117, for default max_life
 	[krb5-admin/18]

Thu Oct 17 16:14:11 1996  Barry Jaspan  <bjaspan@mit.edu>

	* config/unix.exp, lib/lib.t: begin in process of making these
 	unit tests less horribly inefficient

	* api.[02]/crte-principal.exp, api.[02].mod-principal: update unit
 	tests for new pw_expiration semantics [krb5-admin/87]

	* Makefile.in: ditch the capi and sapi hack, just the api for
 	everything, and rename the log files after the tests complete so
 	they are both kept around for viewing [krb5-admin/82]

Mon Oct 14 07:04:27 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in: Only try to run tests if both runtest and the tcl
		libraries present.

	* configure.in: Check for runtest and Tcl.

Fri Oct  4 08:31:50 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* sizes-test.c: Removed program.

	* Makefile.in: Remove sizes-test.

Tue Oct  1 14:45:37 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* api.2/init-v2.exp: Remove tests 104 & 105 as lockfile and
		policy database names are hard wired. [krb5-admin/46]

Thu Sep 26 17:44:10 1996  Barry Jaspan  <bjaspan@mit.edu>

	* api.0/init.exp, api.1/lock.exp, api.2/init.exp: use $K5ROOT
 	instead of /krb5

Wed Sep 25 17:45:44 1996  Barry Jaspan  <bjaspan@mit.edu>

	* api.1/lock.exp: lockfile is now kdb5.kadm5.lock

Mon Sep 23 16:31:24 1996  Barry Jaspan  <bjaspan@mit.edu>

	* changes to use runtest --srcdir:
	- Makefile.in: rewrote [csapi].* links to work in srcdir (boo,
 	hiss)
	- move lib.t to lib/lib.t
	- api.*/*.exp: s/source lib.t/load_lib lib.t/
	
Fri Sep 20 16:51:26 1996  Barry Jaspan  <bjaspan@mit.edu>

	* created Makefile.in and configure.in

Wed Sep 11 17:03:22 1996  Barry Jaspan  <bjaspan@mit.edu>

	* api.2/init-v2.exp: make test100 only run on client

Tue Aug 20 13:46:54 1996  Barry Jaspan  <bjaspan@mit.edu>

	* Makefile.ov (unit-test-server-body): remove kdb5_edit
